Atualizando o repositório, site tá ficando dahora, por enquanto só tem conteúdo, em breve é os códigos de programação

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-
+        
     </header>
     <main>
         <section>
@@ -29,41 +29,43 @@
 
             <p class="paragrafos">
                 Por exemplo, crie um algoritmo da sua rotina diária:(Eu vou fazer o da minha mas voçê pode fazer da sua, se quiser anotar em um papel para ficar mais fácil de entender também.) <br>
-                <p id="passos">
-                    1º ao acordar: <br>
-                    &nbsp; &nbsp; levantar; <br>
-                    senão: <br> &nbsp; &nbsp; ficar deitado;
-                    <br>
-                    2º Depois de levantar: <br>
-                    &nbsp; &nbsp; escovar os dentes; <br>
-                    senão: <br>
-                    &nbsp; &nbsp; ficar com a boca fedendo; <br>
-                    3º Depois de escovar: <br>
-                    &nbsp; &nbsp; tomar café da manhã; <br>
-                    senão: <br>
-                    &nbsp; &nbsp; ficar com fome; <br>
-                    4º Após tomar café da manha: <br>
-                        &nbsp; &nbsp; se estiver no horário da aula: <br>
-                            &nbsp; &nbsp; &nbsp; entrar no link; <br>
+                <p class="exemplos" id="passos">
+                    <strong>
+                        1º ao acordar: <br>
+                        &nbsp; &nbsp; levantar; <br>
+                        senão: <br> &nbsp; &nbsp; ficar deitado;
+                        <br>
+                        2º Depois de levantar: <br>
+                        &nbsp; &nbsp; escovar os dentes; <br>
                         senão: <br>
-                           &nbsp; &nbsp; esperar; <br>
-                                   5º Após a aula: <br>
-                        &nbsp; &nbsp; almoçar; <br>
-                      senão: <br>
-                        &nbsp; &nbsp; ficar com fome denovo; <br>
-                    6º Após almoçar: <br>
-                        &nbsp; Se estiver na hora: <br>
-                            &nbsp; &nbsp; trabalhar de Jovem Aprendiz(Home Office); <br>
-                        &nbsp; senão: <br>
-                            esperar; <br>
-                     7º Depois que terminar o trabalho Home Office e lanchar: <br>
-                        &nbsp; &nbsp; Me arrumar e ir trabalhar de motoboy; <br>
-                    8º Ao chegar das entregas: <br>
-                        &nbsp; &nbsp; jantar; <br>
-                    9º Após jantar: <br>
-                        &nbsp; tomar banho e estudar; <br>
-                    10º Após estudar: <br>
-                        &nbsp; dormir; <br>
+                        &nbsp; &nbsp; ficar com a boca fedendo; <br>
+                        3º Depois de escovar: <br>
+                        &nbsp; &nbsp; tomar café da manhã; <br>
+                        senão: <br>
+                        &nbsp; &nbsp; ficar com fome; <br>
+                        4º Após tomar café da manha: <br>
+                            &nbsp; &nbsp; se estiver no horário da aula: <br>
+                                &nbsp; &nbsp; &nbsp; entrar no link; <br>
+                            senão: <br>
+                               &nbsp; &nbsp; esperar; <br>
+                                       5º Após a aula: <br>
+                            &nbsp; &nbsp; almoçar; <br>
+                          senão: <br>
+                            &nbsp; &nbsp; ficar com fome denovo; <br>
+                        6º Após almoçar: <br>
+                            &nbsp; Se estiver na hora: <br>
+                                &nbsp; &nbsp; trabalhar de Jovem Aprendiz(Home Office); <br>
+                            &nbsp; senão: <br>
+                                esperar; <br>
+                         7º Depois que terminar o trabalho Home Office e lanchar: <br>
+                            &nbsp; &nbsp; Me arrumar e ir trabalhar de motoboy; <br>
+                        8º Ao chegar das entregas: <br>
+                            &nbsp; &nbsp; jantar; <br>
+                        9º Após jantar: <br>
+                            &nbsp; tomar banho e estudar; <br>
+                        10º Após estudar: <br>
+                            &nbsp; dormir; <br>
+                    </strong>
                 </p>
             </p>
             <h3 id="fimAlgoritmo">Fim do algoritmo!</h3>
@@ -85,6 +87,63 @@
             <p class="paragrafos">
                 A linguagem de programação é como se fosse um idioma de programação. Existem mais de mil linguagens de programação, cada uma com seu objetivo específico, mas todas seguem a mesma lógica então não cabe dizer qual é a melhor linguagem de programação. Se voçê for aprender programar recomendo a aprender lógica de programação antes, assim facilitará o seu aprendizado, faça um cursinho breve para entender como funciona assim vc não ficará perdido ao ver os códigos de programação.
             </p>
+            <h1 class="titulo">Sintaxe e Semântica</h1>
+            <img src="imagens/Sintaxe_Semantica.png" alt="Sintaxe e Semântica" class="imagens">
+            <p class="paragrafos">Sintaxe é como se escreve uma palavra ou código de programação, já a semântica quer dizer o que algo signica ou representa.</p>
+
+            <h1 class="titulo">Variável</h1>
+            <img src="imagens/variaveis.png" alt="Variáveis em programação" class="imagens">
+            <p class="paragrafos">Resumidamente variáveis são alocações de espaço em memório, ou seja ao declarar uma variável vc reserva um espaço na memória do seu computador para armazenar algum dado. É como se fosse uma gaveta ou uma vaga de estacionamento. Veja o exemplo abaixo: </p>
+            <p class="exemplos"><strong>
+                 main() { <br>
+                    &nbsp; &nbsp; var hello = "Hello World"; <br>
+                    &nbsp; &nbsp; var numero = 2; <br>
+                    &nbsp; &nbsp; print(hello); <br>
+                    &nbsp; &nbsp; print(numero); <br>
+                }
+            </strong>
+            </p>
+
+            <h1 class="titulo">Função Principal(main)</h1>
+            <img src="imagens/funcao-main.png" alt="Função main" class="imagens">
+            <p class="paragrafos">O main é a função principal do programa, tudo que estiver dentro dele será executado. Veja o exemplo abaixo: </p>
+
+            <p class="exemplos" id="main_Exemplo"><strong>
+                main() { <br>
+                &nbsp; &nbsp;print ("Hello World"); <br>
+                &nbsp; &nbsp;print ("Segunda impressão"); <br>
+                }
+            </strong></p>
+            <h1 class="titulo">Input e Output(Entrada e Saída)</h1>
+            <p class="paragrafos">Como falamos anteriormente o computador trabalha com entrada, processamento e saída de dados. O exemplo que mostramos acima é um exemplo de entrada, processamento e saída de dados, pois o print é a entrada, o computador processa os dados que voçê escreveu nesse print, e a saída ele imprime na tela o que está escrito no print.</p>
+
+            <h1 class="titulo">Concatenação de Texto</h1>
+            <p class="paragrafos">A concatenação de texto serve para juntar dois textos diferentes, ou juntar um texto ao valor de uma variável, e essa <strong>concatenação é representada por um sinal de '+'</strong>.</p>
+            <p class="exemplos"><strong>
+                main() { <br>
+                   &nbsp; &nbsp; var text1 = "Marcos"; <br>
+                   &nbsp; &nbsp; var text2 = "Lírio"; <br>
+                   &nbsp; &nbsp; var total = text1 + text2; <br>
+                   &nbsp; &nbsp; print(total); <br>
+                }
+            </strong></p>
+
+            <h1 class="titulo">Operaçoes matemáticas</h1>
+            <p class="paragrafos">Com programação também podemos fazer operações matemáticas temos duas maneiras, veja abaixo como fazer isso: </p>
+            <p class="exemplos"><strong>
+                main() { <br>
+                    &nbsp; &nbsp; var total = 2 + 3; <br>
+                    &nbsp; &nbsp; print(total);
+            </strong>
+            </p>
+            <p class="exemplos"><strong>
+                main() { <br>
+                    &nbsp; &nbsp; var num1 = 10; <br>
+                    &nbsp; &nbsp; var num2 = 2; <br>
+                    &nbsp; &nbsp; var total = num1 + num2; <br>
+                    &nbsp; &nbsp; print(total); <br>
+                }
+            </strong></p>
         </section>
     </main>
     
