Fazendo esses comit's direto para não esquecer os códigos git

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
     <header>
-        
+            <section id="menu">
+                <p>O que voçê deseja aprender?</p>
+           </section>
     </header>
     <main>
-        <section>
+        <section>  
             <h1 class="titulo">Programação de computadores</h1>
            
             <img src="imagens/programacaoComputadores.png" alt="Programação de computadores" class="imagens">
