criei a página de ensino de banco de dados é já adicionei os códigos de ensino, falta só a parte de estilo da página

--- a/index.html
+++ b/index.html
@@ -11,23 +11,33 @@
     <header>
             <section id="menu">
                 <p>O que voçê deseja aprender?</p>
+                <div>
+                    
+                </div>
            </section>
     </header>
     <main>
         <section>  
             <h1 class="titulo">Programação de computadores</h1>
-           
-            <img src="imagens/programacaoComputadores.png" alt="Programação de computadores" class="imagens">
+           <div class="imagens">
+               <source media="(max-width: 1050px)" srcset="imagens/programacaoComputadores-G.png">
+               <source media="(max-width: 350px)" srcset="imagens/programacaoComputadores-M.png">
+                <img src="imagens/programacaoComputadores.png" alt="Programação de computadores">
+           </div>
 
             <p class="paragrafos">Olá, tudo bêm com voçê? espero que sim, se voçê gosta de computadores e informática vei ao lugar certo, vou compartilhar com voçês minha experiência de aprendizado de programação. Sem mais demoras vamos lá!</p>
         </section>
         <section>
             <h1 class="titulo">Algoritmos</h1>
-            <img src="imagens/alogritmo.png" alt="algoritmos" class="imagens">
+            <div class="imagens">
+                <img src="imagens/alogritmo.png" alt="algoritmos">
+            </div>
             <p class="paragrafos">Algoritmo é como se fosse uma receita de bolo, ou uma sequência de passos a ser seguidos para resolver tal problema ou situação. Um algoritmo funcionar não quer dizer que esteja certo, voçê pode dizer que ele esteja certo quando resolver o seu problema ou situação. 
             </p>
 
-            <img src="imagens/receitaBolo.png" alt="Receita de Bolo" class="imagens">
+            <div class="imagens">
+                <img src="imagens/receitaBolo.png" alt="Receita de Bolo">
+            </div>
 
             <p class="paragrafos">
                 Por exemplo, crie um algoritmo da sua rotina diária:(Eu vou fazer o da minha mas voçê pode fazer da sua, se quiser anotar em um papel para ficar mais fácil de entender também.) <br>
@@ -75,7 +85,9 @@
         <section>
             <h1 class="titulo">Algoritmos computacionais</h1>
 
-            <img src="imagens/algoritmosComputacionais.png" alt="Algoritimos Computacionais" class="imagens">
+            <div class="imagens">
+                <img src="imagens/algoritmosComputacionais.png" alt="Algoritimos Computacionais">
+            </div>
 
             <p class="paragrafos">
                 Os computadores funcionam a base de três passos, são eles: entrada de dados, processamento desses dados, e saída(resposta ao usuário). <br> obs: Automatizar processos nem sempre é a solução para algunsproblemas. É correto imagnar que o usuário terá a capacidade de executar o que precisar. <br> ~Jacob Moura.
@@ -84,17 +96,23 @@
         <section id="Linguagem de Programação">
             <h1 class="titulo">Linguagem de programação</h1>
 
-            <img src="imagens/linguagemProgramacao.png" alt="Linguagem de programação" class="imagens">
+            <div class="imagens">
+                <img src="imagens/linguagemProgramacao.png" alt="Linguagem de programação">
+            </div>
 
             <p class="paragrafos">
                 A linguagem de programação é como se fosse um idioma de programação. Existem mais de mil linguagens de programação, cada uma com seu objetivo específico, mas todas seguem a mesma lógica então não cabe dizer qual é a melhor linguagem de programação. Se voçê for aprender programar recomendo a aprender lógica de programação antes, assim facilitará o seu aprendizado, faça um cursinho breve para entender como funciona assim vc não ficará perdido ao ver os códigos de programação.
             </p>
             <h1 class="titulo">Sintaxe e Semântica</h1>
-            <img src="imagens/Sintaxe_Semantica.png" alt="Sintaxe e Semântica" class="imagens">
+            <div class="imagens">
+                <img src="imagens/Sintaxe_Semantica.png" alt="Sintaxe e Semântica">
+            </div>
             <p class="paragrafos">Sintaxe é como se escreve uma palavra ou código de programação, já a semântica quer dizer o que algo signica ou representa.</p>
 
             <h1 class="titulo">Variável</h1>
-            <img src="imagens/variaveis.png" alt="Variáveis em programação" class="imagens">
+            <div class="imagens">
+                <img src="imagens/variaveis.png" alt="Variáveis em programação">
+            </div>
             <p class="paragrafos">Resumidamente variáveis são alocações de espaço em memório, ou seja ao declarar uma variável vc reserva um espaço na memória do seu computador para armazenar algum dado. É como se fosse uma gaveta ou uma vaga de estacionamento. Veja o exemplo abaixo: </p>
             <p class="exemplos"><strong>
                  main() { <br>
@@ -107,7 +125,9 @@
             </p>
 
             <h1 class="titulo">Função Principal(main)</h1>
-            <img src="imagens/funcao-main.png" alt="Função main" class="imagens">
+            <div class="imagens">
+                <img src="imagens/funcao-main.png" alt="Função main">
+            </div>
             <p class="paragrafos">O main é a função principal do programa, tudo que estiver dentro dele será executado. Veja o exemplo abaixo: </p>
 
             <p class="exemplos" id="main_Exemplo"><strong>
